@@ -7,7 +7,9 @@ Added setting to send a final space after every word in the osd adventure keyboa
 Improved ZRCP commands smartload and snapshot-load
 Improved vu-meters: high volumes are shown in red
 Improved sprite viewer: you can view sprites up to 512x512
-Improved disassemble window: now you can export the disassemble to text file
+Improved disassemble window: 
+*now you can export the disassemble to text file
+*you can now see the full opcode when debugging Sinclair QL
 Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn’t reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)
